index.js created

--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
     <h1>Search By Student Name</h1>
     <input type="text" palceholder="Enter the name...">
     <button id = "searchBtn">Get details</button>
-    <div></div>
+    <div> </div>
+    <br>
+    <h2>Add new student</h2>
+    <form action="addNewStudent" method="post">
+        <label for="student_name">Student Name :</label>
+        <input type="text" name = "student_name">
+        <button type="submit">Add Student</button>
+<!--
+        <label for="student_age">Age: </label>
+        <input type="text" age = "student_age">
+
+        <label for="college">College: </label>
+        <input type="text" college = "college">
+
+        <label for="student_roll">Roll No:</label> 
+        <input type="text" id = "student_roll">
+        <br> -->
+        
+    </form>
 
 
     <script src="app.js"></script>
